完成统计显示，待调优

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
 			name: "number_9",
 			path: "/img/numbers/9.png"
 		}, {
+			name: "number_0",
+			path: "/img/numbers/0.png"
+		}, {
 			name: "number_dot",
 			path: "/img/numbers/dot.png"
 		}, {
