完成道具、开始

--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
 			name: "bg",
 			path: "/img/bg.png"
 		}, {
+			name: "start",
+			path: "/img/start.png"
+		}, {
+			name: "btn_start",
+			path: "/img/btn_start.png"
+		}, {
+			name: "btn_submit",
+			path: "/img/btn_submit.png"
+		}, {
+			name: "end",
+			path: "/img/end.png"
+		}, {
 			name: "car1",
 			path: "/img/car1.png"
 		}, {
@@ -39,8 +51,11 @@
 			name: "gas",
 			path: "/img/gas.png"
 		}, {
-			name: "jyq",
-			path: "/img/jyq.png"
+			name: "jyq1",
+			path: "/img/jyq1.png"
+		}, {
+			name: "jyq2",
+			path: "/img/jyq2.png"
 		}, {
 			name: "roadtip",
 			path: "/img/roadtip.png"
