--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
 			name: "bg",
 			path: "/img/bg.png"
 		}, {
+			name: "bg_left",
+			path: "/img/bg_left.png"
+		}, {
+			name: "bg_right",
+			path: "/img/bg_right.png"
+		}, {
 			name: "start",
 			path: "/img/start.png"
 		}, {
