--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript">
 
 	var game = {
-		debug: false,
+		debug: true,
 
 		// 所有静态资源，图片文件、脚本文件、声音文件
 		resources: [{
@@ -63,93 +63,6 @@
 		}, {
 			name: "time_go",
 			path: "/img/time/go.png"
-		}, {
-			name: "number_1",
-			path: "/img/numbers/1.png"
-		}, {
-			name: "number_2",
-			path: "/img/numbers/2.png"
-		}, {
-			name: "number_3",
-			path: "/img/numbers/3.png"
-		}, {
-			name: "number_4",
-			path: "/img/numbers/4.png"
-		}, {
-			name: "number_5",
-			path: "/img/numbers/5.png"
-		}, {
-			name: "number_6",
-			path: "/img/numbers/6.png"
-		}, {
-			name: "number_7",
-			path: "/img/numbers/7.png"
-		}, {
-			name: "number_8",
-			path: "/img/numbers/8.png"
-		}, {
-			name: "number_9",
-			path: "/img/numbers/9.png"
-		}, {
-			name: "number_0",
-			path: "/img/numbers/0.png"
-		}, {
-			name: "number_dot",
-			path: "/img/numbers/dot.png"
-		}, {
-			name: "number_dw",
-			path: "/img/numbers/dw.png"
-		}, {
-			name: "number_km",
-			path: "/img/numbers/km.png"
-		}, {
-			name: "building_l0",
-			path: "/img/buildings/l0.png"
-		}, {
-			name: "building_l1",
-			path: "/img/buildings/l1.png"
-		}, {
-			name: "building_l2",
-			path: "/img/buildings/l2.png"
-		}, {
-			name: "building_l3",
-			path: "/img/buildings/l3.png"
-		}, {
-			name: "building_l4",
-			path: "/img/buildings/l4.png"
-		}, {
-			name: "building_l5",
-			path: "/img/buildings/l5.png"
-		}, {
-			name: "building_l6",
-			path: "/img/buildings/l6.png"
-		}, {
-			name: "building_l7",
-			path: "/img/buildings/l7.png"
-		}, {
-			name: "building_r0",
-			path: "/img/buildings/r0.png"
-		}, {
-			name: "building_r1",
-			path: "/img/buildings/r1.png"
-		}, {
-			name: "building_r2",
-			path: "/img/buildings/r2.png"
-		}, {
-			name: "building_r3",
-			path: "/img/buildings/r3.png"
-		}, {
-			name: "building_r4",
-			path: "/img/buildings/r4.png"
-		}, {
-			name: "building_r5",
-			path: "/img/buildings/r5.png"
-		}, {
-			name: "building_r6",
-			path: "/img/buildings/r6.png"
-		}, {
-			name: "building_r7",
-			path: "/img/buildings/r7.png"
 		}, {
 			type: "js",
 			path: "/js/main/main.js"
