--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>CarRace</title>
-	<script src="/js/lib/Box2dWeb-2.1.a.3.min.js"></script>
-	<script src="/js/lib/lufylegend-1.9.0.js"></script>
+	<script src="js/lib/Box2dWeb-2.1.a.3.min.js"></script>
+	<script src="js/lib/lufylegend-1.9.0.js"></script>
 	<script type="text/javascript">
 
 	var game = {
-		debug: true,
+		debug: false,
 
 		// 所有静态资源，图片文件、脚本文件、声音文件
 		resources: [{
